deployment/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dentalhelp
  labels:
    name: dentalhelp
    app: dental-help-microservices
